--- a/.travis.yml
+++ b/.travis.yml
@@ -19,17 +19,17 @@ script:
   - docker build -t udagram-api-user ./udagram-api-user
   - docker build -t udagram-api-feed ./udagram-api-feed
   - docker build -t udagram-frontend ./udagram-frontend
-  - docker tag reverseproxy tobialaran/reverseproxy:v1
-  - docker tag udagram-api-user tobialaran/udagram-api-user:v1
-  - docker tag udagram-api-feed tobialaran/udagram-api-feed:v1
-  - docker tag udagram-frontend tobialaran/udagram-frontend:v1
+  - docker tag reverseproxy tobialaran/reverseproxy:v"$TRAVIS_BUILD_NUMBER"
+  - docker tag udagram-api-user tobialaran/udagram-api-user:v"$TRAVIS_BUILD_NUMBER"
+  - docker tag udagram-api-feed tobialaran/udagram-api-feed:v"$TRAVIS_BUILD_NUMBER"
+  - docker tag udagram-frontend tobialaran/udagram-frontend:v"$TRAVIS_BUILD_NUMBER"
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push tobialaran/reverseproxy:v1
-  - docker push tobialaran/udagram-api-user:v1
-  - docker push tobialaran/udagram-api-feed:v1
-  - docker push tobialaran/udagram-frontend:v1
+  - docker push tobialaran/reverseproxy:v"$TRAVIS_BUILD_NUMBER"
+  - docker push tobialaran/udagram-api-user:v"$TRAVIS_BUILD_NUMBER"
+  - docker push tobialaran/udagram-api-feed:v"$TRAVIS_BUILD_NUMBER"
+  - docker push tobialaran/udagram-frontend:v"$TRAVIS_BUILD_NUMBER"
 
 branches:
   only:
