move deployment files to k8s folder

--- a/k8s/backend-user-deployment.yaml
+++ b/k8s/backend-user-deployment.yaml
@@ -16,7 +16,13 @@ spec:
         - name: backend-user
           image: tobialaran/udagram-api-user:v4
           imagePullPolicy: Always
-          resources: {}
+          resources: 
+            limits:
+              cpu: '2'
+              memory: 2Gi
+            requests:
+              cpu: '1'
+              memory: 1Gi
           envFrom: 
             - configMapRef: 
                 name: env-configmap
