--- a/k8s/env-configmap.yaml
+++ b/k8s/env-configmap.yaml
@@ -3,9 +3,9 @@ kind: ConfigMap
 metadata:
   name: env-configmap
 data:
-  POSTGRES_HOST :  "database-2.csebyz67xw5r.us-east-1.rds.amazonaws.com"
+  POSTGRES_HOST :  "database-1.c7lc58jexewi.us-east-1.rds.amazonaws.com"
   POSTGRES_DB :  "postgres"
-  AWS_BUCKET :  "1989938-monolith-ms-dev"
+  AWS_BUCKET :  "tobialaran-udagram-dev2"
   AWS_REGION :  "us-east-1"
   AWS_PROFILE :  "default"
   URL :  "http://localhost:8100"
